# open-ta

./: .gitignore  ADMIN_DASHBOARD_STATUS.md  AGENT.md  DEBUG.md  DEBUGGING_GUIDE.md  OI_SIGNAL_SYSTEM.md  README.md  TEST_ADMIN_DASHBOARD.md  TRADING_DAYS_IMPLEMENTATION.md  angel_scanner.py  config.py  df_OI.json  docker-compose.debug.yml  docker-compose.yml  main.py  requirements.txt  samco_mcx.ipynb  scratch.ipynb  stocks.csv  test_admin.py  test_debugging.py  webSocket.py
backend/: Dockerfile  bhavcopy_analytics.py  data_processor.py  delivery_analytics.py  design_patterns.py  kafka_consumer.py  main.py  mcx_symbols.py  nse_symbols.py  pyproject.toml  scratch.py  start_debug.py
backend/app/: config.py  main.py  main_old.py  streaming.py  websocket_handler.py
backend/app/all_files/: angel_scanner.py  olddd_main.py  samco_mcx.ipynb  scratch.ipynb  scratch.py  webSocket.py
backend/app/api/: graphql.py  rest.py
backend/app/db/: crud.py  database.py  models.py  operations.py  schemas.py  timescale_models.py  timescale_operations.py  timescale_setup.py
backend/app/graphql/: __init__.py  mutations.py  queries.py  schema.py  types.py
backend/app/signals/: oi_signal_engine.py  signal_engine.py
backend/app/streaming/: __init__.py  kafka_producer.py  (+5 more)
backend/sector/: ind_nifty500list.csv  ind_niftyautolist.csv  ind_niftyconsumerdurableslist.csv  ind_niftyfinancelist.csv  ind_niftyhealthcarelist.csv  ind_niftymedialist.csv  ind_niftymetallist.csv  ind_niftymidsmallfinancailservice_list.csv  ind_niftypharmalist.csv  ind_niftyrealtylist.csv  ind_niftysmallcap250list.csv  sector_mapping.py
backend/trading/: __init__.py  models.py  realtime_data_manager.py  smart_api_manager.py
(+29 files in other folders)
