[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.22"
psycopg2-binary = "^2.9.9"
redis = "^3.5.3"
pymysql = "^1.0.2"
logzero = "^1.7.0"
pandas = "^2.2.2"
requests = "^2.26.0"
pyotp = "^2.6.0"
kafka-python = "^2.0.2"
smartapi-python = "1.4.8"
websockets = "^12.0"
websocket-client = "1.6.0"
ratelimit = "^2.2.1"
ptvsd = "^4.3.2"
watchdog = "^4.0.1"
streamlit = "^1.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"